# 5e_string

./: CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/: allTestsTasks.h  alternatingWordsFormTwoString.h  areEqualWordsInString.h  countWordsPalindorme.h  deletePalindroms.h  digitToStartWithoutChangingTheOrderOfTheWord.h  getLastWordInFirstStringInTheSecondString.h  isWordsOrdered.h  printReverseWords.h  printWordBeforeFirstWordWithA.h  removeExtraSpaces.h  removeNonLetters.h  replace.h  replacingEachDigitWithSpaces.h  reverseWordsInString.h
